# finai-hackops

./: .gitignore  README.md  package-lock.json
finai-hackops/: README.md  package-lock.json  package.json  requirements.txt  test_backend_integration.py  vite.config.ts
finai-hackops/.git_disabled/: index  packed-refs
finai-hackops/backend/: .env  README.md  finai_dev.db  init_database.py  init_db.py  pyproject.toml  requirements.txt
finai-hackops/backend/app/: main.py
finai-hackops/backend/app/ai/: clean_data.py  predict.py  train_model.py
finai-hackops/backend/app/api/: analysis.py  auth.py  budgets.py  transactions.py
finai-hackops/backend/app/data/raw/: Budget_Spending_Data.csv  personal_finance_tracker_dataset.csv
finai-hackops/backend/app/db/: database.py
finai-hackops/backend/app/services/: gemini_service.py
finai-hackops/backend/models/: feature_names.pkl  salary_plan_model.pkl
finai-hackops/frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
finai-hackops/frontend/.git_disabled/: FETCH_HEAD  config  packed-refs
finai-hackops/frontend/src/: App.tsx  index.css  main.tsx
finai-hackops/src/components/: Layout.tsx
finai-hackops/src/contexts/: AuthContext.tsx  BudgetContext.tsx
finai-hackops/src/pages/: Budget.tsx  Dashboard.tsx  Readings.tsx  Savings.tsx  (+1 more)
src/: App.tsx
src/components/: ProfileDropdown.tsx
src/contexts/: AuthContext.tsx  BudgetContext.tsx
src/pages/: Dashboard.tsx  Profile.tsx  Readings.tsx  Reminders.tsx  Savings.tsx
supabase/: config.toml
(+34 files in other folders)
